fix: update deprecated function of java8